# finlearn-api

./: .gitignore  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 17e49dae63db_add_role_row.py  54e07237f3d0_adicionando_relacionamento_post_e_user.py  6ceb61a35a0a_adicionando_tabela_postlike.py  91009795dc83_add_user_empty_table.py  e28d73d30248_add_talk_id.py  e4f8b2181c39_add_talk_and_post_tbl.py  ef75e91d01ff_add_rows_in_user_table.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  post.py  practice.py  talk.py  user.py
app/config/: database.py  settings.py
app/core/: models.py
app/core/entities/: audits.py  base.py
app/core/middleware/: auth.py  db.py  error_handler.py
app/domain/social_media/entities/: post.py  talk.py
app/domain/social_media/models/: post_model.py  talk_model.py
app/domain/social_media/repositories/: post_repository.py  talk_repository.py
app/domain/user/entities/: user.py
app/domain/user/models/: user_model.py
app/domain/user/repositories/: user_repository.py
app/providers/: hash_provider.py  token_provider.py
