[tool.poetry]
name = "finlearn-api"
version = "0.1.0"
description = ""
authors = ["Leonardo Magalhães <leonardo@biomainvestimentos.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11.1"
alembic = "^1.10.2"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
click = "^8.1.3"
sqlalchemy = "^2.0.7"
pydantic = "^1.10.6"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.5"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pyjwt = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
